--- a/trunk/YouEat/Info.plist
+++ b/trunk/YouEat/Info.plist
@@ -8,5 +8,9 @@
 	<string>Alessandro Vincelli</string>
 	<key>CFBundleIdentifier</key>
 	<string>it.av.iphone.$PRODUCT_NAME</string>
+	<key>CFBundleVersion</key>
+	<string>0.1</string>
+	<key>CFBundleShortVersionString</key>
+	<string>0.1</string>
 </dict>
 </plist>
